--- a/scratch_pad_2024.Rmd
+++ b/scratch_pad_2024.Rmd
@@ -1,12 +1,16 @@
 ---
-title: "Scratch Pad"
-author: "Bryan Johns"
-date: "`r Sys.Date()`"
+title: "2024 Scratch Pad"
+author: "<p style='font-style: italic;'>Bryan Johns</p>"
+# date: "`r format(Sys.Date(), '%Y-%m')`"
+date: "`r format(Sys.Date(), '%B %Y')`"
 output:
   html_document:
     toc: true
     toc_depth: 2
     toc_float: true
+    includes:
+      before_body: "header.html"
+    css: ./resources/css/styles.css
 ---
 
 ```{r setup, include=FALSE}
@@ -16,7 +20,11 @@ library(sf)
 library(ggspatial)
 ```
 
-# Scratch Pad for 2024 Cyclistic Data Analysis
+## Scratch Pad for 2024 Cyclistic Exploratory Data Analysis
+
+<div class="button">
+  <a href="summary_2024.html#analysis">Back to<br>Cyclistic 2024</a>
+</div>
 
 Exploratory Data Analysis, unencumbered by the need to be **too** presentable. 
 
@@ -1310,3 +1318,6 @@ plot_leaflet_heatmap(trips_to_top_end_casual, "start_lng", "start_lat", "Origins
 
 ```
 
+
+<img src="./resources/images/Logo_Freepik.png" alt="Cyclistic Logo" style="width:200px; display:block; margin:auto;">
+<p style="font-size: 12px; color: #555; margin:auto; text-align: center;">Source: <a href="https://www.freepik.com">Freepik</a></p>
